src/styles/globals.css
@import "tailwindcss";
@import "normalize.css/normalize.css";

:root {
  --background: #fff;
  --foreground: #000;
  --storm: #0d1429;
  --text-color: #d65938;
  --text-blue: #cce8eb;
  --bg-blue: #a5d8dd;
  --font-size: 10px;
  --spacing: 1rem;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-text-color: var(--text-color);
  --color-text-blue: var(--text-blue);
  --color-bg-blue: var(--bg-blue);
  --color-storm: var(--storm);
  --font-valve: var(--font-valve);

  /* responsive */
  --breakpoint-2xl: 2000px;
  --breakpoint-xl: 1711px;
  --breakpoint-lgx: 1360px;
  --breakpoint-lg: 1024px;
  --breakpoint-md: 800px;
  --breakpoint-sm: 648px;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #fff;
    --foreground: #000;
    --color-storm: var(--storm);
    --color-bg-blue: var(--bg-blue);

    /* responsive */
    --breakpoint-2xl: 2000px;
    --breakpoint-xl: 1711px;
    --breakpoint-lgx: 1360px;
    --breakpoint-lg: 1024px;
    --breakpoint-md: 800px;
    --breakpoint-sm: 648px;
  }
}

html,
body {
  overflow-x: hidden;
  font-weight: 500;
  line-height: 1.5;
  font-family: var(--font-valve);
  &::-webkit-scrollbar {
    display: none !important;
  }
  scrollbar-width: 0;
}

html {
  font-size: var(--font-size, 10px);
}

body {
  background: var(--background);
  color: var(--foreground);
  position: relative;
  font-size: 1.5rem;

  width: 100%;
  margin: 0;
  overscroll-behavior: none;
  touch-action: none;
}

.noise {
  background-color: transparent;
  background-image: url("/textures/noise.webp");
  height: 100svh;
  left: 0;
  mix-blend-mode: luminosity;
  opacity: 0.1;
  pointer-events: none;
  position: fixed;
  top: 0;
  width: 100svw;
  z-index: 30;
}

/* .cardBox {
  position: relative;
  &::before {
    content: "";
    position: absolute;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
    width: 104%;
    height: 110%;
    border-radius: 12px;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    border: 2px solid black;
    border-bottom: 0;
    background: var(--text-blue);
    z-index: -1;
  }
} */

.button {
  background: #fff;
  display: block;
  border-color: #000;
  border-width: 2px;
  border-radius: 12px;
  padding: 3px 12px;
}

.box1 {
  border-width: 3px 4px 3px 5px;
  border-radius: 95% 4% 92% 5%/4% 95% 6% 95%;
  transform: rotate(2deg);
}

svg .letter {
  will-change: transform;
}

.stroke {
  -webkit-text-stroke: 2px #000000;
  text-stroke: 2px #000000;
  color: var(--bg-blue);
  transition: color 0.27s ease;
}
stroke:hover {
  color: var(--text-color);
}
div.group:hover > .stroke {
  color: var(--text-color);
}

